# SupersonicTestRocket

./: .gitignore  Doxyfile  README.md  doxygen_log.txt
.github/workflows/: main.yaml
Arduino/Data_logger_supersonic_rocket/: platformio.ini  workspace.code-workspace
Arduino/data_logger/: data_logger.ino
Data_logger_supersonic_rocket/: platformio.ini
Data_logger_supersonic_rocket/include/: dataAcquisition.h  io.h
Data_logger_supersonic_rocket/src/: dataAcquisition.cpp  main.cpp
KF/2D/: KF.m  KF2D.m  addGPSerror.m  addINSerror.m  computeKalmanMatrices.m  rotate2D.m  (+8 more)
bin_decoder/: decodeErrorByte.m  decoder.asv  decoder.m
data_analysis/: 3d_movement_example.py  Dashboard.py  Dashboard_Subplot.py  Packet.py  _3d_plotter.py  checkErrors.py  compare_flight_data.py  data.txt  fileManager.py  logFileReader.py  packetDecoder.py  plotFlight.py  serialReader.py
data_logger/: .gitignore  Doxyfile  README.md  extra_script.py  platformio.ini
drop_test/: data_analysis.py
ground_station/hermesGS/: CMakeLists.txt  README.md  autoBuild.sh
ground_station/hermesGS/RF-UI-Interface/: CMakeLists.txt
ground_station/hermesGS/Telecom/DataHandler/: DataHandler.cpp
ground_station/hermesGS/Telecom/DataStructures/Hermes/: hermesAD8556.cpp  hermesAD8556.h  hermesADIS16470.cpp  hermesADIS16470.h  hermesAISx120SX.cpp  hermesAltimax.cpp  hermesHoneywellRsc_Pressure.cpp  hermesHoneywellRsc_Temp.cpp  hermesHoneywellRsc_Temp.h  hermesMAX7.cpp  hermesMAX7.h
ground_station/hermesGS/ext/: Hermes_Packets
ground_station/hermesGS/src/: HERMES_AVsim.cpp  HERMES_GS.cpp
mtp/: mtp.diff  mtp.ino
(+505 files in other folders)
